Edited SwipeRefreshLayout code

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,14 @@
     <color name="green">#AADF4D</color>
     <color name="lightblue">#4DB1DF</color>
     <color name="lightpurple">#BF07EC </color>
+    <color name="ic_back_arrow_background">#FFFFFF</color>
+    <color name="ic_call_background">#FFFFFF</color>
+    <color name="ic_help_background">#FFFFFF</color>
+    <color name="ic_home_background">#FFFFFF</color>
+    <color name="ic_menu_background">#FFFFFF</color>
+    <color name="ic_notification_background">#FFFFFF</color>
+    <color name="ic_sms_background">#FFFFFF</color>
+    <color name="ic_spinner_arrow_background">#FFFFFF</color>
+    <color name="ic_statistics_background">#FFFFFF</color>
 
 </resources>
