--- a/app/src/main/res/layout/global_fragment.xml
+++ b/app/src/main/res/layout/global_fragment.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:weightSum="3">
+            android:weightSum="2">
 
             <TextView
                 android:layout_width="match_parent"
@@ -28,7 +28,8 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/total"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="gone"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -38,13 +39,14 @@
                 android:text="@string/today"
                 android:textSize="12sp" />
 
-            <TextView
+            <!--<TextView
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/yesterday"
-                android:textSize="12sp" />
+                android:textSize="12sp" />-->
         </LinearLayout>
 
 
