--- a/app/src/main/res/layout/mycountry_fragment.xml
+++ b/app/src/main/res/layout/mycountry_fragment.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:weightSum="3">
+            android:weightSum="2">
 
             <TextView
                 android:layout_width="match_parent"
@@ -28,6 +28,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/total"
+                android:visibility="gone"
                 android:textSize="12sp" />
 
             <TextView
@@ -36,15 +37,16 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/today"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                />
 
-            <TextView
+            <!--<TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/yesterday"
-                android:textSize="12sp" />
+                android:textSize="12sp" />-->
         </LinearLayout>
 
 
