--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -132,6 +132,7 @@
             android:layout_marginTop="50dp">
 
             <TextView
+                android:layout_marginStart="10dp"
                 android:id="@+id/chart_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
