--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="grey">#e6e6e6</color>
     <color name="white">#FFFFFF</color>
+    <color name="lightpurplecolor">#d0b4dc</color>
 
     <color name="blue">#0000FF </color>
     <color name="red">#FF0000 </color>
