--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -23,19 +23,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/ic_menu_foreground" />
+                android:src="@drawable/ic_keyboard_arrow_foreground" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_bell_second_foreground" />
+                android:src="@drawable/ic_options_menu_foreground" />
 
         </RelativeLayout>
 
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
@@ -118,10 +119,11 @@
     </ScrollView>
 
     <LinearLayout
-        android:layout_height="230dp"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="230dp"
         android:background="@drawable/half_dashboard_background"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="2dp"
         tools:layout_editor_absoluteY="200dp">
 
@@ -129,13 +131,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="10dp">
 
             <TextView
-                android:layout_marginStart="10dp"
                 android:id="@+id/chart_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:text="@string/daily_new_cases"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -145,8 +147,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/chart_title"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
                 app:cardBackgroundColor="@color/colorPrimary"
