--- a/app/src/main/res/drawable/tablayout_background.xml
+++ b/app/src/main/res/drawable/tablayout_background.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/lightpurplecolor" />
+    <solid android:color="@color/lightblue" />
     <padding
         android:bottom="2dp"
         android:left="2dp"
         android:right="2dp"
         android:top="2dp" />
     <gradient
-        android:endColor="@color/lightpurplecolor"
-        android:startColor="@color/lightpurplecolor" />
+        android:endColor="@color/lightblue"
+        android:startColor="@color/lightblue" />
     <corners android:radius="60dp" />
 </shape>
