--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/grey">
+    android:background="@drawable/full_dashboard_background">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
